--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -1,11 +1,12 @@
 .card__box {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 .cards {
-  margin: 5px;
-  width: 250px;
+  margin: 3px;
+  max-width: 250px;
   height: 390px;
   display: flex;
   flex-direction: column;
@@ -14,6 +15,7 @@
   box-shadow: 0px 10px 100px 10px rgba(255, 255, 255, 0.2);
   border-radius: 25px;
   border: none;
+  margin-bottom: 10px;
 }
 .cards h2 {
   font-family: "Jost";
@@ -36,6 +38,12 @@
   color: #ffffff;
 }
 .cards img {
-  width: 230px;
+  max-width: 230px;
   height: 230px;
+}
+
+@media (max-width: 767.98px) {
+  .cards {
+    background-color: #008653;
+  }
 }
